# pet_report

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: eval_cases.yml
data/knowledge_base/: pet_report_knowledge.yml
data/reference_ranges/: reference_ranges.yml
data/samples/: sample_report.txt
pet_report/: cli.py  main.py
pet_report/api/: routes.py
pet_report/core/: config.py  logging.py  security.py  trace.py
pet_report/eval/: runner.py
pet_report/interpretation/: rules.py
pet_report/knowledge/: references.py
pet_report/llm/: base.py  factory.py  rule_generator.py  transformers_generator.py
pet_report/models/: schemas.py
pet_report/observability/: metrics.py
pet_report/ocr/: base.py  factory.py  paddle_backend.py  tesseract_backend.py  text_backend.py
pet_report/rag/: retriever.py
pet_report/safety/: risk.py
pet_report/services/: report_service.py
pet_report/structuring/: parser.py  units.py
pet_report_structuring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_parser.py  test_service.py
