[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-report-structuring"
version = "1.0.0"
description = "Production-style pet medical report OCR, structuring and interpretation service with open-source model backends"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "AI Agent Engineering"}]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.1",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
  "prometheus-client>=0.20.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.5.0"]
ocr = ["paddleocr>=2.8.1", "paddlepaddle>=2.6.0", "pytesseract>=0.3.10", "pymupdf>=1.24.0"]
llm = ["transformers>=4.44.0", "torch>=2.2.0", "accelerate>=0.33.0"]
all = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.5.0", "paddleocr>=2.8.1", "paddlepaddle>=2.6.0", "pytesseract>=0.3.10", "pymupdf>=1.24.0", "transformers>=4.44.0", "torch>=2.2.0", "accelerate>=0.33.0"]

[project.scripts]
pet-report = "pet_report.cli:main"

[tool.setuptools.packages.find]
include = ["pet_report*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
